[package]
name = "rustrag"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
qdrant-client = "1.12.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
multipart = "0.18"
docx-rust = "0.1.8"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.7.2" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.7.2" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.7.2" }
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
anyhow = "1.0"
chrono = "0.4"
ftail="0.1.2"
log="0.4"
tokenizers={version = "0.20",features = ["onig"] }
hf-hub = "0.3.2"
